Fix: line-height mismatch on narrow cards

--- a/rails/app/assets/stylesheets/cms/_cards.scss
+++ b/rails/app/assets/stylesheets/cms/_cards.scss
@@ -97,7 +97,7 @@
 
     &.narrow-spacing {
       margin: 0;
-      line-height: .5rem;
+      line-height: .8rem;
       font-size: .8rem;
     }
   }
